--- a/app/src/main/res/layout/activity_create_appointment.xml
+++ b/app/src/main/res/layout/activity_create_appointment.xml
@@ -105,8 +105,7 @@
             android:id="@+id/spnr_visit_return_type"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:entries="@array/visit_return_type"
-            android:spinnerMode="dialog"/>
+            android:entries="@array/visit_return_type"/>
 
         <TextView
             android:layout_width="fill_parent"
