--- a/app/src/main/res/layout-v21/action_bar_custom.xml
+++ b/app/src/main/res/layout-v21/action_bar_custom.xml
@@ -12,5 +12,6 @@
         android:paddingLeft="-48dp"
         android:gravity="center_horizontal"
         android:text="SMART"
-        style="@android:style/TextAppearance.Material.Title"/>
+        style="@android:style/TextAppearance.Material.Title"
+        android:textColor="@color/white" />
 </RelativeLayout>
