--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,6 +1,7 @@
 <resources>
     <style name="AppTheme" parent="Theme.AppCompat.Light">
         <item name="drawerArrowStyle">@style/DrawerArrowStyle</item>
+        <item name="colorPrimary">@color/clinical_blue</item>
     </style>
 
     <style name="DrawerArrowStyle" parent="Widget.AppCompat.DrawerArrowToggle">
@@ -11,7 +12,7 @@
         <item name="android:background">@drawable/spinner_bg</item>
     </style>
 
-   <style name="CallToActionButton" parent="AppTheme">
+   <style name="CallToActionButton" >
        <item name="colorButtonNormal">@color/action_button</item>
        <item name="android:textColor">@color/white</item>
        <item name="android:textSize">@dimen/text_medium</item>
@@ -19,7 +20,7 @@
        <item name="android:paddingBottom">@dimen/padding_small</item>
     </style>
 
-    <style name="SecondaryButton" parent="AppTheme">
+    <style name="SecondaryButton">
         <item name="colorButtonNormal">@color/very_light_grey</item>
         <item name="android:textColor">@color/black</item>
     </style>
