--- a/app/src/main/res/layout/activity_clinic_time_record.xml
+++ b/app/src/main/res/layout/activity_clinic_time_record.xml
@@ -26,7 +26,7 @@
 
         <Button
             android:id="@+id/btn_check_in"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/start_clinic"
             android:layout_weight="1.0"
@@ -34,7 +34,7 @@
 
         <Button
             android:id="@+id/btn_check_out"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/stop_clinic"
             android:layout_weight="1.0"
