--- a/app/src/main/res/layout/list_appointment_layout.xml
+++ b/app/src/main/res/layout/list_appointment_layout.xml
@@ -15,7 +15,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#FF5534"
+            android:background="@color/spinner_warning"
             android:gravity="center"
             android:tag="Bottom3"
             android:paddingRight="5dp"
@@ -27,17 +27,17 @@
                 android:layout_weight="6"
                 android:paddingLeft="@dimen/padding_small"
                 android:text="Appointment Attended?"
-                android:textColor="#fff"
-                android:textSize="17sp" />
+                android:textColor="@color/black"
+                android:textSize="@dimen/text_Xsmall" />
 
             <Button
                 android:id="@+id/btn_change_status"
                 android:layout_width="0dp"
-                android:layout_height="40dp"
+                android:layout_height="wrap_content"
                 android:layout_weight="4"
-                android:background="#ffffff"
                 android:text="Yes"
-                android:textColor="#FF5534" />
+                android:theme="@style/CallToActionButton"
+                android:textSize="@dimen/text_Xsmall"/>
         </LinearLayout>
         <!--Bottom View End-->
 
