--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -20,4 +20,7 @@
     <color name="action_button">#43A047</color>
     <color name="free_slot">#81C784</color>
 
+    <color name="unattended">#FFCC80</color>
+    <color name="attended">#26A69A</color>
+
 </resources>
