--- a/app/src/main/res/layout/activity_post_natal.xml
+++ b/app/src/main/res/layout/activity_post_natal.xml
@@ -28,8 +28,8 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/border"
-                android:padding="@dimen/padding_natal"
-                android:weightSum="1.0">
+                android:weightSum="1.0"
+                android:layout_marginTop="-0.8dp">
 
                 <TextView
                     android:layout_width="fill_parent"
@@ -54,7 +54,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/border"
-                android:padding="@dimen/padding_natal">
+                android:layout_marginTop="-0.8dp">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -77,7 +77,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/border"
-                android:padding="@dimen/padding_natal">
+                android:layout_marginTop="-0.8dp">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -102,8 +102,8 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/border"
-                android:padding="@dimen/padding_natal"
-                android:weightSum="1.0">
+                android:weightSum="1.0"
+                android:layout_marginTop="-0.8dp">
 
                 <TextView
                     android:layout_width="fill_parent"
@@ -151,7 +151,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/border"
-                android:padding="@dimen/padding_natal">
+                android:layout_marginTop="-0.8dp">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -174,7 +174,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/border"
-                android:padding="@dimen/padding_natal">
+                android:layout_marginTop="-0.8dp">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -220,7 +220,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/border"
-                android:padding="@dimen/padding_natal">
+                android:layout_marginTop="-0.8dp">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -243,7 +243,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/border"
-                android:padding="@dimen/padding_natal">
+                android:layout_marginTop="-0.8dp">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -267,7 +267,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/border"
-                android:padding="@dimen/padding_natal">
+                android:layout_marginTop="-0.8dp">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -290,7 +290,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/border"
-                android:padding="@dimen/padding_natal">
+                android:layout_marginTop="-0.8dp">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -313,7 +313,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/border"
-                android:padding="@dimen/padding_natal">
+                android:layout_marginTop="-0.8dp">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -336,7 +336,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/border"
-                android:padding="@dimen/padding_natal">
+                android:layout_marginTop="-0.8dp">
 
                 <TextView
                     android:layout_width="wrap_content"
