--- a/app/src/main/res/layout/activity_service_user.xml
+++ b/app/src/main/res/layout/activity_service_user.xml
@@ -7,68 +7,6 @@
     android:weightSum="7.0"
     tools:context="${relativePackage}.${activityClass}">
 
-    <!--<LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/padding_small"
-        android:paddingTop="@dimen/padding_Xsmall"
-        android:paddingBottom="@dimen/padding_Xsmall"
-        android:gravity="center"
-        android:orientation="vertical"
-        android:background="@color/very_light_grey">
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="Age: "
-                android:textSize="@dimen/text_small"
-                android:textColor="@color/grey"/>
-
-            <TextView
-                android:id="@+id/tv_usr_age"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:textSize="@dimen/text_small" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text=", P: "
-                android:textSize="@dimen/text_small"
-                android:textColor="@color/grey"/>
-
-            <TextView
-                android:id="@+id/tv_usr_partiy"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:textSize="@dimen/text_small" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text=", G: "
-                android:textSize="@dimen/text_small"
-                android:textColor="@color/grey"/>
-
-            <TextView
-                android:id="@+id/tv_usr_gestation"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:textSize="@dimen/text_small" />
-        </LinearLayout>
-    </LinearLayout>-->
-
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
@@ -77,7 +15,7 @@
 
         <LinearLayout
             android:id="@+id/ll_usr_contact"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:paddingBottom="@dimen/padding_medium">
@@ -96,7 +34,7 @@
 
                 <TextView
                     android:id="@+id/tv_usr_hospital_number"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="fill_horizontal"
                     android:text="@string/hospital_number"
@@ -104,7 +42,7 @@
 
                 <TextView
                     android:id="@+id/tv_usr_email"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="fill_horizontal"
                     android:text="@string/email"
@@ -112,7 +50,7 @@
 
                 <TextView
                     android:id="@+id/tv_usr_mobile"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="fill_horizontal"
                     android:text="@string/mobile"
@@ -136,29 +74,29 @@
                 android:clickable="true" />
 
             <LinearLayout
-                android:layout_width="fill_parent"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/tv_usr_road"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="fill_horizontal"
                     android:text="@string/road"
-                    android:textSize="@dimen/text_small" />
+                    android:textSize="@dimen/text_small"/>
 
                 <TextView
                     android:id="@+id/tv_usr_county"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="fill_horizontal"
                     android:text="@string/county"
-                    android:textSize="@dimen/text_small" />
+                    android:textSize="@dimen/text_small"/>
 
                 <TextView
                     android:id="@+id/tv_usr_post_code"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="fill_horizontal"
                     android:text="@string/post_code"
@@ -193,7 +131,7 @@
 
                     <TextView
                         android:id="@+id/tv_usr_kin_name"
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="fill_horizontal"
                         android:text="@string/kin_name"
@@ -201,7 +139,7 @@
 
                     <TextView
                         android:id="@+id/tv_usr_kin_contact"
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="fill_horizontal"
                         android:text="@string/kin_contact"
