change colour of SecondaryButton

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -21,7 +21,7 @@
     </style>
 
     <style name="SecondaryButton">
-        <item name="colorButtonNormal">@color/very_light_grey</item>
+        <item name="colorButtonNormal">@color/lightBlue</item>
         <item name="android:textColor">@color/black</item>
     </style>
 </resources>
