rename lightBlue colour to teal

--- a/app/src/main/res/layout/activity_clinic_time_record.xml
+++ b/app/src/main/res/layout/activity_clinic_time_record.xml
@@ -16,7 +16,7 @@
         android:id="@+id/lv_time_record_clinics"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:listSelector="@color/lightBlue"/>
+        android:listSelector="@color/teal"/>
 
     <LinearLayout
         android:layout_width="match_parent"
