--- a/app/src/main/res/layout/activity_service_user_tabhost.xml
+++ b/app/src/main/res/layout/activity_service_user_tabhost.xml
@@ -49,6 +49,7 @@
                 android:textSize="@dimen/text_small"/>
 
             <TextView
+                android:id="@+id/tv_usr_gestation_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
