--- a/app/src/main/res/layout/anti_d_list_layout.xml
+++ b/app/src/main/res/layout/anti_d_list_layout.xml
@@ -11,7 +11,8 @@
         android:layout_height="wrap_content"
         android:text="11:11, 16/06/2015"
         android:textSize="@dimen/text_x_x_small"
-        android:background="@color/light_grey"/>
+        android:textColor="@color/grey"
+        android:background="@color/very_light_grey"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -34,6 +35,7 @@
             android:layout_height="wrap_content"
             android:gravity="end"
             android:text="App Team Chile"
+            android:textColor="@color/light_grey"
             android:textSize="@dimen/text_Xsmall"
             android:layout_weight="0.5"/>
 
