--- a/app/src/main/res/layout/activity_pregnancy_notes.xml
+++ b/app/src/main/res/layout/activity_pregnancy_notes.xml
@@ -3,10 +3,40 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:orientation="vertical"
     tools:context="ie.teamchile.smartapp.activities.PregnancyNotesActivity">
+
+    <ListView
+        android:id="@+id/lv_pregnancy_notes"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:orientation="vertical">
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:hint="@string/enter_note_hint"
+                android:textColor="@color/black"
+                android:textColorHint="#A9A9A9"/>
+
+            <Button
+                android:id="@+id/btn_add_pregnancy_note"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Add Pregnancy Note"
+                android:theme="@style/CallToActionButton" />
+        </LinearLayout>
+
+    </RelativeLayout>
 
 </LinearLayout>
