--- a/app/src/main/res/layout/activity_service_user.xml
+++ b/app/src/main/res/layout/activity_service_user.xml
@@ -10,15 +10,15 @@
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:paddingTop="@dimen/padding_small">
+        android:orientation="vertical">
 
         <LinearLayout
             android:id="@+id/ll_usr_contact"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:paddingBottom="@dimen/padding_medium">
+            android:paddingBottom="@dimen/padding_medium"
+            android:background="@drawable/border">
 
             <Button
                 android:id="@+id/btn_usr_contact"
@@ -63,7 +63,8 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:paddingBottom="@dimen/padding_medium">
+            android:paddingBottom="@dimen/padding_medium"
+            android:background="@drawable/border">
 
             <Button
                 android:id="@+id/btn_usr_address"
@@ -114,7 +115,8 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:paddingBottom="@dimen/padding_medium">
+                android:paddingBottom="@dimen/padding_medium"
+                android:background="@drawable/border">
 
                 <Button
                     android:id="@+id/btn_usr_kin_contact"
