change cancel button to not call to action

--- a/app/src/main/res/layout/activity_confirm_appointment.xml
+++ b/app/src/main/res/layout/activity_confirm_appointment.xml
@@ -121,7 +121,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="0.5"
-                android:theme="@style/CallToActionButton"
+                android:theme="@style/NotToAction"
                 android:text="@string/cancel" />
         </LinearLayout>
     </LinearLayout>
