--- a/app/src/main/res/layout/activity_pregnancy_notes.xml
+++ b/app/src/main/res/layout/activity_pregnancy_notes.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="ie.teamchile.smartapp.activities.PregnancyNotesActivity">
+    tools:context="ie.teamchile.smartapp.activities.MidwiferyLogActivity">
 
     <ListView
         android:id="@+id/lv_pregnancy_notes"
