--- a/app/src/main/res/layout/midwife_note_list_layout.xml
+++ b/app/src/main/res/layout/midwife_note_list_layout.xml
@@ -5,39 +5,41 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/tv_anti_d_date_time"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="11:11, 16/06/2015"
-        android:textSize="@dimen/text_x_x_small"
-        android:textColor="@color/grey"/>
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:weightSum="1.0"
-        android:paddingLeft="@dimen/padding_small"
-        android:paddingRight="@dimen/padding_small">
+        android:paddingLeft="@dimen/padding_Xsmall"
+        android:paddingRight="@dimen/padding_Xsmall"
+        android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/tv_anti_d_option"
+            android:id="@+id/tv_note_date"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Yes"
-            android:textSize="@dimen/text_Xsmall"
+            android:text="11:11, 16/06/2015"
+            android:textSize="@dimen/text_x_x_small"
+            android:textColor="@color/light_grey"
             android:layout_weight="0.5"/>
 
         <TextView
-            android:id="@+id/tv_anti_d_provider_name"
+            android:id="@+id/tv_note_provider_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="end"
             android:text="App Team Chile"
             android:textColor="@color/light_grey"
-            android:textSize="@dimen/text_Xsmall"
+            android:textSize="@dimen/text_x_x_small"
             android:layout_weight="0.5"/>
 
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/tv_note"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="This is where tha note goes"
+        android:paddingLeft="@dimen/padding_small"
+        android:textSize="@dimen/text_Xsmall"/>
 
 </LinearLayout>
