--- a/app/src/main/res/layout/anti_d_update_dialog.xml
+++ b/app/src/main/res/layout/anti_d_update_dialog.xml
@@ -32,7 +32,7 @@
             android:id="@+id/btn_anti_d"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Add to Anti D History"
+            android:text="@string/save_option"
             android:theme="@style/CallToActionButton"/>
 
     </LinearLayout>
