--- a/app/src/main/res/layout/activity_post_natal.xml
+++ b/app/src/main/res/layout/activity_post_natal.xml
@@ -24,9 +24,9 @@
             <TableRow
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="-0.8dp"
                 android:background="@drawable/border"
-                android:weightSum="1.0"
-                android:layout_marginTop="-0.8dp">
+                android:weightSum="1.0">
 
                 <TextView
                     android:layout_width="fill_parent"
@@ -50,8 +50,8 @@
             <TableRow
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/border"
-                android:layout_marginTop="-0.8dp">
+                android:layout_marginTop="-0.8dp"
+                android:background="@drawable/border">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -74,34 +74,8 @@
                 android:id="@+id/tr_post_anti_d"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/border"
-                android:layout_marginTop="-0.8dp">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/anti_d"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:textColor="@color/light_grey"
-                    android:textSize="@dimen/text_natal_field"/>
-
-                <TextView
-                    android:id="@+id/tv_post_anti_d"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="end"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:textSize="@dimen/text_natal_data"/>
-
-
-            </TableRow>
-
-            <TableRow
-                android:id="@+id/tr_midwife_notes"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/border"
-                android:layout_marginTop="-0.8dp">
+                android:layout_marginTop="-0.8dp"
+                android:background="@drawable/border">
 
                 <RelativeLayout
                     android:layout_width="match_parent"
@@ -110,30 +84,74 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:gravity="center_vertical"
-                        android:text="@string/midwifery_log"
+                        android:layout_alignParentLeft="true"
+                        android:text="@string/anti_d"
                         android:textAppearance="?android:attr/textAppearanceLarge"
                         android:textColor="@color/light_grey"
-                        android:textSize="@dimen/text_natal_field"
-                        android:layout_alignParentLeft="true"/>
+                        android:textSize="@dimen/text_natal_field"/>
+
+                    <TextView
+                        android:id="@+id/tv_post_anti_d"
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_toLeftOf="@+id/iv_history_icon"
+                        android:gravity="end"
+                        android:paddingRight="@dimen/padding_Xsmall"
+                        android:textAppearance="?android:attr/textAppearanceLarge"
+                        android:textSize="@dimen/text_natal_data"/>
+
+                    <ImageView
+                        android:id="@+id/iv_history_icon"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentRight="true"
+                        android:adjustViewBounds="true"
+                        android:clickable="true"
+                        android:gravity="end"
+                        android:src="@drawable/ic_file_document"/>
+
+                </RelativeLayout>
+
+            </TableRow>
+
+            <TableRow
+                android:id="@+id/tr_midwife_notes"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="-0.8dp"
+                android:background="@drawable/border">
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="View"
-                        android:textSize="@dimen/text_natal_field"
+                        android:layout_alignParentLeft="true"
+                        android:gravity="center_vertical"
+                        android:text="@string/midwifery_log"
+                        android:textAppearance="?android:attr/textAppearanceLarge"
+                        android:textColor="@color/light_grey"
+                        android:textSize="@dimen/text_natal_field"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_toLeftOf="@+id/tv_post_midwives_notes"
                         android:paddingRight="@dimen/padding_Xsmall"
-                        android:layout_toLeftOf="@+id/tv_post_midwives_notes"/>
+                        android:text="View"
+                        android:textSize="@dimen/text_natal_field"/>
 
                     <ImageView
                         android:id="@+id/tv_post_midwives_notes"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_alignParentRight="true"
                         android:adjustViewBounds="true"
                         android:clickable="true"
                         android:gravity="end"
-                        android:src="@drawable/ic_file_document"
-                        android:layout_alignParentRight="true"/>
+                        android:src="@drawable/ic_file_document"/>
 
                 </RelativeLayout>
             </TableRow>
@@ -155,8 +173,8 @@
             <TableRow
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/border"
-                android:layout_marginTop="-0.8dp">
+                android:layout_marginTop="-0.8dp"
+                android:background="@drawable/border">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -164,7 +182,7 @@
                     android:text="@string/delivery_date"
                     android:textAppearance="?android:attr/textAppearanceLarge"
                     android:textColor="@color/light_grey"
-                    android:textSize="@dimen/text_natal_field" />
+                    android:textSize="@dimen/text_natal_field"/>
 
                 <TextView
                     android:id="@+id/tv_post_delivery_date"
@@ -178,8 +196,8 @@
             <TableRow
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/border"
-                android:layout_marginTop="-0.8dp">
+                android:layout_marginTop="-0.8dp"
+                android:background="@drawable/border">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -187,7 +205,7 @@
                     android:text="@string/delivery_time"
                     android:textAppearance="?android:attr/textAppearanceLarge"
                     android:textColor="@color/light_grey"
-                    android:textSize="@dimen/text_natal_field" />
+                    android:textSize="@dimen/text_natal_field"/>
 
                 <TextView
                     android:id="@+id/tv_post_delivery_time"
@@ -210,7 +228,7 @@
                     android:text="@string/days_sinceBirth"
                     android:textAppearance="?android:attr/textAppearanceLarge"
                     android:textColor="@color/light_grey"
-                    android:textSize="@dimen/text_natal_field" />
+                    android:textSize="@dimen/text_natal_field"/>
 
                 <TextView
                     android:id="@+id/tv_post_days_since_birth"
@@ -224,8 +242,8 @@
             <TableRow
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/border"
-                android:layout_marginTop="-0.8dp">
+                android:layout_marginTop="-0.8dp"
+                android:background="@drawable/border">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -233,7 +251,7 @@
                     android:text="@string/sex_of_baby"
                     android:textAppearance="?android:attr/textAppearanceLarge"
                     android:textColor="@color/light_grey"
-                    android:textSize="@dimen/text_natal_field" />
+                    android:textSize="@dimen/text_natal_field"/>
 
                 <TextView
                     android:id="@+id/tv_post_gender"
@@ -247,8 +265,8 @@
             <TableRow
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/border"
-                android:layout_marginTop="-0.8dp">
+                android:layout_marginTop="-0.8dp"
+                android:background="@drawable/border">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -257,7 +275,7 @@
                     android:text="@string/birth_weight"
                     android:textAppearance="?android:attr/textAppearanceLarge"
                     android:textColor="@color/light_grey"
-                    android:textSize="@dimen/text_natal_field" />
+                    android:textSize="@dimen/text_natal_field"/>
 
                 <TextView
                     android:id="@+id/tv_post_weight"
@@ -271,8 +289,8 @@
             <TableRow
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/border"
-                android:layout_marginTop="-0.8dp">
+                android:layout_marginTop="-0.8dp"
+                android:background="@drawable/border">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -280,7 +298,7 @@
                     android:text="@string/vit_k"
                     android:textAppearance="?android:attr/textAppearanceLarge"
                     android:textColor="@color/light_grey"
-                    android:textSize="@dimen/text_natal_field" />
+                    android:textSize="@dimen/text_natal_field"/>
 
                 <TextView
                     android:id="@+id/tv_post_vit_k"
@@ -294,8 +312,8 @@
             <TableRow
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/border"
-                android:layout_marginTop="-0.8dp">
+                android:layout_marginTop="-0.8dp"
+                android:background="@drawable/border">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -303,7 +321,7 @@
                     android:text="@string/baby_hearing"
                     android:textAppearance="?android:attr/textAppearanceLarge"
                     android:textColor="@color/light_grey"
-                    android:textSize="@dimen/text_natal_field" />
+                    android:textSize="@dimen/text_natal_field"/>
 
                 <TextView
                     android:id="@+id/tv_post_hearing"
@@ -317,8 +335,8 @@
             <TableRow
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/border"
-                android:layout_marginTop="-0.8dp">
+                android:layout_marginTop="-0.8dp"
+                android:background="@drawable/border">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -326,7 +344,7 @@
                     android:text="@string/baby_feeding"
                     android:textAppearance="?android:attr/textAppearanceLarge"
                     android:textColor="@color/light_grey"
-                    android:textSize="@dimen/text_natal_field" />
+                    android:textSize="@dimen/text_natal_field"/>
 
                 <TextView
                     android:id="@+id/tv_post_feeding"
@@ -340,8 +358,8 @@
             <TableRow
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/border"
-                android:layout_marginTop="-0.8dp">
+                android:layout_marginTop="-0.8dp"
+                android:background="@drawable/border">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -349,7 +367,7 @@
                     android:text="@string/nbst"
                     android:textAppearance="?android:attr/textAppearanceLarge"
                     android:textColor="@color/light_grey"
-                    android:textSize="@dimen/text_natal_field" />
+                    android:textSize="@dimen/text_natal_field"/>
 
                 <TextView
                     android:id="@+id/tv_post_nbst"
