--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -23,6 +23,7 @@
     <style name="SecondaryButton">
         <item name="colorButtonNormal">@color/teal</item>
         <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">@dimen/text_medium</item>
     </style>
 
     <style name="NotToAction">
