--- a/app/src/main/res/layout/activity_midwifery_log.xml
+++ b/app/src/main/res/layout/activity_midwifery_log.xml
@@ -10,7 +10,7 @@
         android:id="@+id/btn_add_midwifery_note"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Add Pregnancy Note"
+        android:text="@string/add_note"
         android:theme="@style/SecondaryButton" />
 
     <ListView
