--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -123,7 +123,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center|top"
             android:linksClickable="true"
-            android:text="@string/about"
+            android:text="@string/about_url"
             android:textColor="@color/blue"/>
 
     </LinearLayout>
