--- a/app/src/main/res/layout/activity_home_visit_appointment.xml
+++ b/app/src/main/res/layout/activity_home_visit_appointment.xml
@@ -1,16 +1,47 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:tools="http://schemas.android.com/tools"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:paddingLeft="@dimen/activity_horizontal_margin"
-                android:paddingRight="@dimen/activity_horizontal_margin"
-                android:paddingTop="@dimen/activity_vertical_margin"
-                android:paddingBottom="@dimen/activity_vertical_margin"
-                tools:context="ie.teamchile.smartapp.activities.HomeVisitAppointmentActivity">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:layout_width="fill_parent"
+              android:layout_height="wrap_content"
+              android:orientation="vertical" >
 
-    <TextView
-        android:text="@string/hello_world"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal" >
+
+        <Button
+            android:id="@+id/btn_prev"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/prev_button"
+            android:textColor="@color/grey"
+            android:textSize="@dimen/text_Xsmall"
+            android:drawableLeft="@drawable/ic_chevron_left"/>
+
+        <Button
+            android:id="@+id/btn_date"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_weight="1"
+            android:theme="@style/SecondaryButton"
+            android:text="@string/date_button"
+            android:textSize="@dimen/text_Xsmall"
+            android:drawableLeft="@drawable/ic_chevron_down"/>
+
+        <Button
+            android:id="@+id/btn_next"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/next_button"
+            android:textSize="@dimen/text_Xsmall"
+            android:textColor="@color/grey"
+            android:drawableRight="@drawable/ic_chevron_right"/>
+    </LinearLayout>
+
+    <ListView
+        android:id="@+id/lv_home_visit"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
-
-</RelativeLayout>
+</LinearLayout>
