--- a/app/src/main/res/layout/list_home_visit_appointment_layout.xml
+++ b/app/src/main/res/layout/list_home_visit_appointment_layout.xml
@@ -1,7 +1,88 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
+    <com.daimajia.swipe.SwipeLayout
+        android:id="@+id/swipe_home_visit_appt"
+        xmlns:swipe="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        swipe:leftEdgeSwipeOffset="0dp"
+        swipe:rightEdgeSwipeOffset="0dp">
+
+        <!--Bottom View Start-->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/spinner_warning"
+            android:gravity="center"
+            android:paddingRight="5dp"
+            android:tag="Bottom3"
+            android:weightSum="10">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="6"
+                android:paddingLeft="@dimen/padding_small"
+                android:text="Appointment Attended?"
+                android:textColor="@color/black"
+                android:textSize="@dimen/text_Xsmall"/>
+
+            <Button
+                android:id="@+id/btn_change_status"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="4"
+                android:text="Yes"
+                android:textSize="@dimen/text_Xsmall"
+                android:theme="@style/CallToActionButton"/>
+        </LinearLayout>
+        <!--Bottom View End-->
+
+        <!--Surface View Start-->
+        <LinearLayout
+            android:id="@+id/ll_appt_list_item"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="?android:attr/selectableItemBackground"
+            android:orientation="horizontal"
+            android:paddingBottom="@dimen/padding_small"
+            android:paddingTop="@dimen/padding_small"
+            android:weightSum="3.0">
+
+            <TextView
+                android:id="@+id/tv_name"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:layout_weight="2.0"
+                android:ellipsize="end"
+                android:singleLine="true"
+                android:textAlignment="gravity"
+                android:textSize="@dimen/text_small"/>
+
+            <TextView
+                android:id="@+id/tv_gestation"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.7"
+                android:gravity="end|center"
+                android:paddingRight="@dimen/padding_small"
+                android:textSize="@dimen/text_small"/>
+
+            <ImageView
+                android:id="@+id/img_attended"
+                android:layout_width="0dp"
+                android:layout_height="30dp"
+                android:layout_marginRight="15dp"
+                android:layout_weight="0.3"
+                android:background="@drawable/border"
+                android:paddingLeft="5dp"/>
+
+            <!--Surface View End-->
+        </LinearLayout>
+    </com.daimajia.swipe.SwipeLayout>
 </LinearLayout>
+
